--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,11 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
+  assets:
+    - assets/happy_face.jpeg
+    - assets/sad_face.png
+    - assets/shocked_face.png
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
